tests/NormalTests/paczka1/fuzzy1/55947716.err
Error in line 3: LrATNLj53k6 A400 55,3
Error in line 16: GI4f S238 48,1
Error in line 17: GI4f A739 85,9
Error in line 22: SjxgOzN A739 197,1
Error in line 27: LrATNLj53k6 S459 76,74
Error in line 23: A739 A400 99,9
Error in line 30: 5HRixWIF5N A739 6,3
Error in line 25: SjxgOzN S459 32,8
